5.0.0 -> 5.1a1:
    - jbj: propagate the time a package was first installed through upgrades.
    - jbj: replace sr.po from translation project.
    - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
    - rse: (again) replace u_int32_t with uint32_t to be consistent across the code base
    - jbj: use RPM_OS_NTOQNX as manifest constant.
    - jbj: updated nl.po (Translation Project).
    - rpm.org: Missing space in russian translation (mdvbz#36974).
    - rpm.org: Quote find-debuginfo builddir to avoid whitespace issues.
    - jbj: generailize to verify(*) => -Va and verify(/path) => -Vf /path.
    - jbj: fix: no output performing verify(...) probe.
    - jbj: fix: insure valid exit code for verify(...) probe.
    - jbj: add verify(N) = E:V-R runtime dependency probe. more to do ...
    - jbj: stub in RPMTAG_FILESTAT and RPMTAG_STAT extensions, w-i-p.
    - jbj: re-add PayloadFilesHavePrefix/CompressedFileNames w --lsb.
    - rse: provide %{shrink:<body>} macro for removing leading+trailing and removing intermediate whitespaces
    - rse: allow sub-shell and Lua independent speedy lookup of environment variables via %{getenv:<name>} in macros
    - jbj: QNX needs defines for fts.c.
    - rse: upgrade from Lua 5.1.2 to Lua 5.1.3 (external and internal)
    - jbj: include <pthread.h> everywhere.
    - jbj: rpmsq.h doesn't need pthread condvar/mutex any more.
    - jbj: QNX does not have insque/remque.
    - jbj: QNX does not have d_off.
    - rse: add RPM Lua function rpm.debug() to complement rpm.verbose()
    - mej: catch EOF returned as RPMRC_NOTFOUND correctly.
    - rse: add support for QNX by adjusting to its 3-parameter based makedev(2)
    - jbj: resurrect rpm.spec.in.
    - jbj: fix: permit %{lua:...} to recurse.
    - rse: allow to compile without <langinfo.h> and its nl_langinfo(3)
    - rse: provide RPM Lua function posix.glob(<pattern>)