@@ -1,4 +1,5 @@
 5.0.0 -> 5.1a1:
+    - jbj: permit "-N-V-R.A" erasure args within install/upgrade transactions.
     - jbj: propagate the time a package was first installed through upgrades.
     - jbj: replace sr.po from translation project.
     - jbj: fix: rpmtsCheck() needs to return 1 when problems exist.
